<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <TableRow
        android:id="@+id/customRiga1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:focusableInTouchMode="false" >

        <ImageButton
            android:id="@+id/imageLocale"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:contentDescription="@string/bottoneLocale" />

        <TextView
            android:id="@+id/nomeLocale"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

        <ImageView
            android:id="@+id/labelOfferta"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:contentDescription="@string/immagineOfferta" />
    </TableRow>

    <TableRow
        android:id="@+id/customRiga2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:focusableInTouchMode="false" >

        <LinearLayout
            android:id="@+id/rigaKMCentrale"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/labelKM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="" />

            <TextView
                android:id="@+id/labelKMOnly"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:layout_weight="1"
                android:focusableInTouchMode="false" 
                android:text="@string/labelKMOnly"/>
        </LinearLayout>

        <TextView
            android:id="@+id/labelTelefono"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text=""
            android:textSize="15sp" />

        <RatingBar
            android:id="@+id/valutazioneLocale"
            style="@style/foodRatingBar"
            android:focusable="false"
            android:isIndicator="false"
            android:numStars="5"
            android:layout_gravity="right"
            android:gravity="right" />
    </TableRow>

</TableLayout>